--- a/.github/workflows/update-channel.yml
+++ b/.github/workflows/update-channel.yml
@@ -1,4 +1,5 @@
 name: Update Discord Month Channel
+
 on:
   schedule:
     - cron: '*/5 * * * *'    # every 5 minutes
@@ -17,10 +18,7 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Install dependencies
-        run: python -m pip install --upgrade pip && pip install requests
-
-      - name: Run update script
+      - name: Run update script (stdlib)
         env:
           DISCORD_TOKEN: ${{ secrets.DISCORD_TOKEN }}
           CHANNEL_ID: ${{ secrets.CHANNEL_ID }}
